Remove @NonNull annotation. Use annotation on package-info.java instead